# GM_DATA

./: CMakeLists.txt
doc/: golfMembersManager_Design.drawio
src/: main.cpp
src/app/Control/: Control.cpp  Control.h
src/app/Device_Data/: MemberInfo.h
src/app/Entity/: MemberEntity.cpp  MemberEntity.h
src/app/Listener/: Listener.cpp  Listener.h
src/app/View/RFID_View/: RFID_View.cpp  RFID_View.h
src/hw/GM/: GM.cpp  GM.h
src/hw/rfid/: CardReader.cpp
